--- a/.npmignore
+++ b/.npmignore
@@ -1,9 +1,12 @@
 *.DS_Store*
 *.log
 *.orig
+.git
 
 node_modules/
 example/
 src/
-webpack.config.js
+babel.config.js
+rollup.config.js
 package-lock.json
+.eslintrc.js
