--- a/package.json
+++ b/package.json
@@ -1,15 +1,14 @@
 {
   "name": "watermark-mini",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "水印插件。",
   "main": "./dist/watermark.min.js",
   "scripts": {
-    "build": "cross-env NODE_ENV=production webpack --progress",
-    "dev": "cross-env NODE_ENV=development webpack --progress"
+    "build": "rollup -c",
+    "dev": "cross-env NODE_ENV=development rollup -c"
   },
   "author": "278773844@qq.com",
   "license": "MIT",
-  "dependencies": {},
   "repository": {
     "type": "git",
     "url": "https://github.com/colien/watermark-mini.git"
@@ -18,12 +17,14 @@
     "watermark"
   ],
   "devDependencies": {
-    "@babel/core": "^7.16.0",
-    "@babel/plugin-transform-object-assign": "^7.16.0",
-    "@babel/preset-env": "^7.16.4",
-    "babel-loader": "^8.2.3",
+    "@babel/core": "^7.17.10",
+    "@babel/plugin-transform-runtime": "^7.17.10",
+    "@babel/preset-env": "^7.17.10",
     "cross-env": "^7.0.3",
-    "webpack": "^5.64.4",
-    "webpack-cli": "^4.9.1"
+    "rollup-plugin-babel": "^4.4.0",
+    "rollup-plugin-commonjs": "^10.1.0",
+    "rollup-plugin-eslint": "^7.0.0",
+    "rollup-plugin-node-resolve": "^5.2.0",
+    "rollup-plugin-terser": "^7.0.2"
   }
 }
